# xiaoyi

./: .gitignore  README.md  main.py  main.xy  xiaoyi.py  xy转py.py  实验.py  实验.xy  测试.py  测试.xy  记录.py
docs/: 中英语法对照.md  函数语法.md  快速入门.md
lib/: 英文转中文函数实现.py
xiaoyi/: classdef.py  cli-py.py  cli.py  config.py  cst.py  cst_name.py  pyproject.toml  re_class_def.py  xiaoyi.py
实验室/: main.py  实验.py  重构代码为中文.py
